--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,11 +18,11 @@ set -g @plugin 'omerxx/tmux-floax'
 
 # TokyoNight Theme
 set -g @plugin 'nikolovlazar/tokyo-night-tmux'
-# set -g status-left "#S "  
-# set -g status-justify left  
-# set -g @tokyo-night-tmux_window_id_style fsquare
-# set -g @tokyo-night-tmux_pane_id_style hsquare
-# set -g @tokyo-night-tmux_zoom_id_style dsquare
+set -g status-left "#S "  
+set -g status-justify left  
+set -g @tokyo-night-tmux_window_id_style fsquare
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 
 # Plugin settings
