--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,13 +17,19 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'omerxx/tmux-floax'
 
 # TokyoNight Theme
-set -g @plugin 'nikolovlazar/tokyo-night-tmux'
-set -g status-left "#S "  
-set -g status-justify left  
-set -g @tokyo-night-tmux_window_id_style fsquare
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
+# set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+# set -g status-left "#S "  
+# set -g status-justify left  
+# set -g @tokyo-night-tmux_window_id_style fsquare
+# set -g @tokyo-night-tmux_pane_id_style hsquare
+# set -g @tokyo-night-tmux_zoom_id_style dsquare
 
+# Catppuccin Mocha
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+set -g @plugin 'catppuccin/tmux#v2.1.0'
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
 
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
