--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,5 +17,8 @@ source = ~/.config/hypr/hyprland/outputs/eDP-1.conf
 source = ~/.config/hypr/hyprland/keybindings/apps.conf
 source = ~/.config/hypr/hyprland/keybindings/basics.conf
 source = ~/.config/hypr/hyprland/keybindings/movement.conf
+source = ~/.config/hypr/hyprland/keybindings/workspaces.conf
+
+# Autostart applications
 source = ~/.config/hypr/hyprland/startup/launch-apps.conf
 
