--- a/.config/hypr/hyprland/startup/launch-apps.conf
+++ b/.config/hypr/hyprland/startup/launch-apps.conf
@@ -3,3 +3,6 @@ exec-once = hypridle
 exec-once = hyprpaper &
 exec-once = waypaper --restore
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
+
+# Change wallpaper every 5 minutes
+exec-once = bash -c 'while true; do ~/.config/hyprland/hyprland/scripts/random-wallpaper.sh; sleep 300; done' &
