--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 # Theme
-theme = catppuccin-mocha
-# background-opacity = 0.75
-background-opacity = 1
+theme = Catppuccin Mocha
+background-opacity = 0.75
+# background-opacity = 1
 
 # Font
 font-family = "JetBrains Mono Nerd Font"
