--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,7 +3,7 @@ background {
 # monitor =
 #path = screenshot
 # path = /home/ssk/Wallpaper-Bank/hiroshi_nagai.png
-  path = /home/ssk/Wallpaper-Bank/1-scenery-pink-lakeside-sunset-lake-landscape-scenic-panorama-7680x3215-144.png    #color = $background
+  path = /home/ssk/Wallpaper-Bank/superman.png
     blur_passes = 2
     contrast = 1
     brightness = 0.5
