--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ source = ~/.config/hypr/hyprland/keybindings/apps.conf
 source = ~/.config/hypr/hyprland/keybindings/basics.conf
 source = ~/.config/hypr/hyprland/keybindings/movement.conf
 source = ~/.config/hypr/hyprland/keybindings/workspaces.conf
+source = ~/.config/hypr/hyprland/keybindings/scratchpad.conf
 
 # Autostart applications
 source = ~/.config/hypr/hyprland/startup/launch-apps.conf
