--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,95 +1,180 @@
-backend = "glx";
-vsync = true;
-glx-use-copysubbuffer-mesa = true;
-# glx-copy-from-front = true;
-# glx-swap-method = 2;
-xrender-sync = true;
-xrender-sync-fence = true;
+#################################
+#             Shadows           #
+#################################
 
-# corners
-rounded-corners = false;
-corner-radius = 0;
+shadow-radius = 7;
 
-# Exclude specific windows from rounded corners (optional)
-rounded-corners-exclude = [
-  "class_g = 'i3-frame'",
-  "class_g = 'Polybar'",
-  "class_g = 'Rofi'",
+# The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
+# shadow-opacity = .75
+
+# The left offset for shadows, in pixels. (defaults to -15)
+# shadow-offset-x = -15
+shadow-offset-x = -7;
+
+# The top offset for shadows, in pixels. (defaults to -15)
+# shadow-offset-y = -15
+shadow-offset-y = -7;
+
+# Specify a list of conditions of windows that should have no shadow.
+#
+# examples:
+#   shadow-exclude = "n:e:Notification";
+#
+# shadow-exclude = []
+shadow-exclude = [
   "name = 'Notification'",
+  "class_g ?= 'Notify-osd'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
+#################################
+#           Fading              #
+#################################
+
+fading = true;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+
+#################################
+#   Transparency / Opacity      #
+#################################
+
+# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
+# inactive-opacity = 1
+inactive-opacity = 0.8;
+
+# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
+frame-opacity = 1.0
+# frame-opacity = 0.7;
+
+# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
+# inactive-opacity-override = true
+inactive-opacity-override = false;
+
+# Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
+# active-opacity = 1.0
+
+# Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
+# inactive-dim = 0.0
+
+# opacity-rule = []
+# opacity-rule = [ "94:class_g = 'Geany'", "95:class_g = 'com.mitchellh.ghostty'" ];
+opacity-rule = [ "94:class_g = 'Geany'"];
+
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 10
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
 ];
 
-detect-rounded-corners = true;
 
-# Blur
-blur-method = "dual_kawase";
-blur-size = 1;
-blur-strength = 0;
-blur-background = true;
-blur-background-frame = false;
+#################################
+#     Background-Blurring       #
+#################################
+
 blur-kern = "3x3box";
+
+
+# Exclude conditions for background blur.
+# blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'Polybar'",
-  "window_type = 'desktop'",
   "window_type = 'dock'",
-  "role = 'xborder'",
-  "class_g = 'Conky'",
-  "name = 'Notification'",
-  "_GTK_FRAME_EXTENTS"
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 
-# Enable shadows
-shadow = false;
-shadow-radius = 20;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-opacity = 0.8;
-shadow-color = "#000000";
-
-shadow-exclude = [
-"class_g =  'Polybar'",
-"class_g =  'Rofi'",
-"name = 'Notification'"
-]
-
-# Opacity
-inactive-opacity = 0.9;
-active-opacity = 1;
-
-
 #################################
-# Animations
+#       General Settings        #
 #################################
 
-animations = true;
-animation-stiffness = 250.0;        # lower = bouncier, higher = stiffer
-animation-dampening = 20.0;         # smooth deceleration
+# Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
+# `xrender` is the default one.
+#
+# backend = "glx"
+backend = "xrender";
 
-# Open/close animations
-animation-for-open-window = "zoom"; # zoom effect similar to Hyprland
-animation-for-unmap-window = "zoom";# shrink + fade when closing
+# Use higher precision during rendering, and apply dither when presenting the
+# rendered screen. Reduces banding artifacts, but might cause performance
+# degradation. Only works with OpenGL.
+dithered-present = false;
 
-# Duration (Hyprland is around 0.25s - 0.3s)
-animation-durations = 0.28;
+# Enable/disable VSync.
+# vsync = false
+vsync = true;
 
-# Curve for smooth start/end (Hyprland feel)
-animation-curve = "ease-out";
+# Try to detect WM windows (a non-override-redirect window with no
+# child that has 'WM_STATE') and mark them as active.
+#
+# mark-wmwin-focused = false
+mark-wmwin-focused = true;
 
-# Dialogs and popups
-animation-for-transient-window = "slide-up";
-animation-for-dialog-window    = "slide-up";
-animation-for-menu-window      = "slide-down";
-animation-for-tooltip-window   = "fade";
+# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
+# mark-ovredir-focused = false
+mark-ovredir-focused = true;
 
-# Keep animations fluid
-animation-clamping = false;
+# Try to detect windows with rounded corners and don't consider them
+# shaped windows. The accuracy is not very high, unfortunately.
+#
+# detect-rounded-corners = false
+detect-rounded-corners = true;
 
-#################################
-# Fade settings
-#################################
-fading = true;
-fade-delta = 10;             # frame interval
-fade-in-step = 0.03;         # smooth fade in
-fade-out-step = 0.03;        # smooth fade out
-fade-exclude = [];           # windows to exclude from fading
+# Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
+# not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
+#
+# detect-client-opacity = false
+detect-client-opacity = true;
+
+# Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
+# rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
+# provided that the WM supports it.
+#
+# use-ewmh-active-win = false
+#
+# detect-transient = false
+detect-transient = true;
+
+# Disable the use of damage information.
+# This cause the whole screen to be redrawn every time, instead of the part of the screen
+# has actually changed. Potentially degrades the performance, but might fix some artifacts.
+# The opposing option is use-damage
+#
+# no-use-damage = false
+use-damage = true;
+
+# Use X Sync fence to sync clients' draw calls, to make sure all draw
+# calls are finished before picom starts drawing. Needed on nvidia-drivers
+# with GLX backend for some users.
+#
+# xrender-sync-fence = false
+
+# GLX backend: Use specified GLSL fragment shader for rendering window
+# contents. Read the man page for a detailed explanation of the interface.
+#
+# window-shader-fg = "default"
+
+# Set the log level. Possible values are:
+#  "trace", "debug", "info", "warn", "error"
+# in increasing level of importance. Case doesn't matter.
+# If using the "TRACE" log level, it's better to log into a file
+# using *--log-file*, since it can generate a huge stream of logs.
+#
+# log-level = "debug"
+log-level = "warn";
+
+wintypes:
+{
+  tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.95; }
+  dropdown_menu = { opacity = 0.95; }
+};
