--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -20,8 +20,8 @@
     "battery",
     "custom/separator",
     "pulseaudio",
-    // "custom/separator",
-    // "backlight",
+    "custom/separator",
+    "backlight",
     "custom/separator",
     "clock#date",
     "custom/separator",
