new waybar style

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ source = ~/.config/hypr/hyprland/keybindings/movement.conf
 source = ~/.config/hypr/hyprland/keybindings/workspaces.conf
 source = ~/.config/hypr/hyprland/keybindings/scratchpad.conf
 source = ~/.config/hypr/hyprland/keybindings/resizing.conf
+source = ~/.config/hypr/hyprland/groups.conf
 
 # Autostart applications
 source = ~/.config/hypr/hyprland/startup/launch-apps.conf
