--- a/.config/hypr/hyprland/colorschemes/mocha.conf
+++ b/.config/hypr/hyprland/colorschemes/mocha.conf
@@ -75,3 +75,22 @@ $mantleAlpha = 181825
 
 $crust = rgb(11111b)
 $crustAlpha = 11111b
+
+$color0 = $base
+$color1 = $red
+$color2 = $peach
+$color3 = $yellow
+$color4 = $green
+$color5 = $teal
+$color6 = $sky
+$color7 = $lavender
+$color8 = $text
+$color9 = $red
+$color10 = $green
+$color11 = $yellow
+$color12 = $blue
+$color13 = $mauve
+$color14 = $teal
+$color15 = $text
+$foreground = $text
+$background = $base
