--- a/.config/hypr/hyprland/keybindings/basics.conf
+++ b/.config/hypr/hyprland/keybindings/basics.conf
@@ -2,6 +2,15 @@
 bind = $mainMod, Q, killactive
 bind = $SUPER_SHIFT, E, exit
 
+# Sound through pactl
+bind = , F3, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , F2, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , F1, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# Brightness through brightnessctl
+bind = , F5, exec, brightnessctl set +5%
+bind = , F4, exec, brightnessctl set 5%-
+
 # Workspace bindings
 bind = $mainMod, slash, exec, hyprctl dispatch workspace e+1
 bind = $mainMod, period, exec, hyprctl dispatch workspace e-1
