--- a/.config/hypr/hyprland/keybindings/resizing.conf
+++ b/.config/hypr/hyprland/keybindings/resizing.conf
@@ -1,3 +1,8 @@
 bind = $mainMod, T, togglesplit,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, W, togglegroup,
+
+bind = $mainMod, h, changegroupactive, b
+bind = $mainMod, l, changegroupactive, f
+bind = $mainMod SHIFT, j, moveintogroup
+bind = $mainMod SHIFT, k, moveoutofgroup
