--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,16 +2,13 @@
   "layer": "bottom",
   "position": "top",
   "height": 30,
-  "margin-top": 5,
-  "margin-left": 10,
-  "margin-right": 10,
   "modules-left": [
     "custom/logo",
-    // "custom/separator",
+    "custom/separator",
     "disk",
-    // "custom/separator",
+    "custom/separator",
     "memory",
-    // "custom/separator",
+    "custom/separator",
     "cpu",
     "sway/scratchpad"
   ],
@@ -21,19 +18,19 @@
   ],
   "modules-right": [
     "battery",
-    // "custom/separator",
+    "custom/separator",
     "pulseaudio",
-    // "custom/separator",
+    "custom/separator",
     "backlight",
-    // "custom/separator",
+    "custom/separator",
     "clock#date",
-    // "custom/separator",
+    "custom/separator",
     "clock",
-    // "custom/separator",
+    "custom/separator",
     "custom/power"
   ],
   "custom/logo": {
-    "format": "",
+    "format": " ",
     "tooltip": false,
     "on-click": "rofi -show drun"
   },
