--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -3,13 +3,9 @@
   "position": "top",
   "height": 30,
   "modules-left": [
-    "custom/logo",
+    "clock",
     "custom/separator",
-    "disk",
-    "custom/separator",
-    "memory",
-    "custom/separator",
-    "cpu",
+    "clock#date",
     "sway/scratchpad"
   ],
   "modules-center": [
@@ -17,17 +13,17 @@
     "hyprland/workspaces"
   ],
   "modules-right": [
-    "battery",
+    "cpu",
     "custom/separator",
-    "pulseaudio",
+    "memory",
+    "custom/separator",
+    "disk",
     "custom/separator",
     "backlight",
     "custom/separator",
-    "clock#date",
+    "pulseaudio",
     "custom/separator",
-    "clock",
-    "custom/separator",
-    "custom/power"
+    "battery"
   ],
   "custom/logo": {
     "format": " ",
@@ -39,12 +35,12 @@
   },
   "disk": {
     "interval": 60,
-    "format": " {}%",
+    "format": "<span color='#ff9e64'>󰋊</span> {percentage_used}%",
     "tooltip-format": "{used}/{total}"
   },
   "cpu": {
     "interval": 1,
-    "format": " {usage}%",
+    "format": "<span color='#f7768e'> </span>{usage}%",
     "tooltip-format": "{usage}%",
     "on-click": "swaymsg exec gnome-system-monitor"
   },
@@ -97,19 +93,18 @@
     }
   },
   "sway/scratchpad": {
-    "format": " {count}",
+    "format": "<span color='#bb9af7'> </span>{count}",
     "show-empty": false,
     "tooltip": true,
     "tooltip-format": "{app}: {title}"
   },
   "clock#date": {
-    "format": " {:%a %b %d}",
+    "format": "<span color='#80bfff'>󰸗</span> {:%a %b %d}",
     "tooltip": true,
     "tooltip-format": "<tt>{calendar}</tt>"
   },
   "clock": {
-    // "format": "  {:%a, %b-%d %Y |   %I:%M %p}",
-    "format": "  {:%I:%M %p}",
+    "format": "<span color='#9c27b0'>󰥔</span> {:%I:%M %p}",
     "tooltip": true,
     "tooltip-format": false,
     "on-click": "swaymsg exec gnome-calendar"
@@ -121,7 +116,7 @@
       "warning": 30,
       "critical": 20
     },
-    "format": " {capacity}%",
+    "format": "<span color='#4fc3f7'></span> {capacity}%",
     "format-charging": " {capacity}%",
     "format-discharging": " {capacity}%",
     "format-critical": "  {capacity}% (Critical!!)",
@@ -134,19 +129,19 @@
     "on-click": "swaymsg exec gnome-control-center power"
   },
   "pulseaudio": {
-    "format": "  {volume}%",
+    "format": "<span color='#c0cafc'> </span> {volume}%",
     "format-muted": " M",
     "tooltip-format": "{desc}"
   },
   "backlight": {
     "device": "intel_backlight",
     "scroll-step": 5,
-    "format": " {percent}%",
+    "format": "<span color='#7aa2f7'></span> {percent}%",
     "tooltip": false
   },
   "memory": {
     "interval": 1,
-    "format": " {}%",
+    "format": "<span color='#4fc3f7'></span> {}%",
     "tooltip-format": "{used}/{total} GiB",
     "on-click": "swaymsg exec gnome-system-monitor"
   },
