refactor: update terminal and neovim configurations
- reorganize kitty themes into themes/ subdirectory and add tokyonight theme
- remove dadbod plugin and add snacks plugin for neovim
- modify mini plugin configuration
- update alacritty, ghostty, niri, and luarc configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,12 +5,11 @@ bold_italic_font auto
 
 font_size 13.0
 window_padding_width 0
-# background_opacity 0.9
-background_opacity 1
+background_opacity 0.75
 hide_window_decorations false
 confirm_os_window_close 0
 
-# cursor_shape beam
+cursor_shape beam
 
 # remember_window_size  yes
 # initial_window_width 720
@@ -25,7 +24,5 @@ map ctrl+minus change_font_size all -1.0
 # shell tmux
 
 
-# include tokyonight.conf
-# include cyberdream.conf
-# include mocha.conf
-include nord.conf
+
+include themes/tokyonight.conf
