feat: switch to tokyo night theme across configs
- update ghostty theme and remove unused variants
- update noctalia colors and settings
- update rofi theme font
- add fzf setup to zshrc
- add git lfs filter
- disable mini files in nvim

--- a/.config/git/config
+++ b/.config/git/config
@@ -114,3 +114,8 @@
 [alias]
 	fix-remote-personal = !git remote set-url origin $(git remote get-url origin | sed \"s|github.com|github-personal|\")
 	fix-remote-work = !git remote set-url origin $(git remote get-url origin | sed \"s|github.com|github-work|\")
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
