feat: update dotfiles configurations
- add harpoon and whichkey plugins to nvim
- add tokyonight colorscheme to hyprland
- modify hyprland keybindings, style, and groups
- update niri config and zshrc
- update nvim lazy-lock and lsp config

--- a/.config/hypr/hyprland/groups.conf
+++ b/.config/hypr/hyprland/groups.conf
@@ -1,23 +1,23 @@
-source = ~/.config/hypr/hyprland/colorschemes/mocha.conf
+source = ~/.config/hypr/hyprland/colorschemes/tokyonight.conf
 
 group {
-    col.border_active = $color2 $color4 45deg
-    col.border_inactive = $color10
-    
+    col.border_active = $blue $text 45deg
+    col.border_inactive = $background
+
     groupbar {
         enabled = true
-        font_family = JetBrainsMono Nerd Font
-        font_size = 12
+        font_family = JetBrainsMono Nerd Font Bold
+        font_size = 16
         gradients = true
         height = 18
         priority = 3
         render_titles = true
         scrolling = true
-        text_color = $foreground
-        
-        col.active = $color3
+        text_color = rgb(255,255,255)
+
+        col.active = $blue
         col.inactive = $background
-        col.locked_active = $color6
-        col.locked_inactive = $color8
+        col.locked_active = $red
+        col.locked_inactive = $blue
     }
 }
