--- a/.config/hypr/hyprland/keybindings/basics.conf
+++ b/.config/hypr/hyprland/keybindings/basics.conf
@@ -18,3 +18,9 @@ bind = $mainMod, period, exec, hyprctl dispatch workspace e-1
 # Screenshot bindings
 bind = , F12, exec, hyprshot -m output -o $HOME/Pictures/Screenshots/
 bind = shift, F12, exec, hyprshot -m window -m active -o $HOME/Pictures/Screenshots/
+bind = ctrl, F12, exec, hyprshot -m region -o $HOME/Pictures/Screenshots/
+
+# Noctalia keybindings
+bind = $mainMod SHIFT, B, exec, qs -c noctalia-shell ipc call bar toggle
+bind = $mainMod, P, exec, qs -c noctalia-shell ipc call sessionMenu toggle
+
