--- a/.config/hypr/hyprland/startup/launch-apps.conf
+++ b/.config/hypr/hyprland/startup/launch-apps.conf
@@ -1,4 +1,5 @@
-exec-once = waybar
+# exec-once = waybar
+exec-once = qs -c noctalia-shell
 exec-once = hypridle
 exec-once = hyprpaper &
 exec-once = waypaper --restore
