--- a/.config/hypr/hyprland/style.conf
+++ b/.config/hypr/hyprland/style.conf
@@ -3,8 +3,8 @@ general {
   gaps_out = 10
 
   border_size = 3
-  col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
-  col.inactive_border = rgba(262626ee)
+  col.active_border = rgb(7aa2f7) rgb(a9b1d6) 45deg
+  col.inactive_border = rgb(1a1b26)
 
   layout = dwindle
 
@@ -16,6 +16,13 @@ decoration {
   rounding = 10
   active_opacity = 1
   inactive_opacity = 0.9
+
+  shadow {
+    enabled = true
+    range = 4
+    render_power = 3
+    color = rgba(1a1b26ee)
+  }
 
   blur {
     enabled = true
