--- a/.config/hypr/hyprland/keybindings/apps.conf
+++ b/.config/hypr/hyprland/keybindings/apps.conf
@@ -2,5 +2,5 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, C, exec, hyprlock
-bind = $mainMod, P, exec, wlogout
+# bind = $mainMod, C, exec, hyprlock
+# bind = $mainMod, P, exec, wlogout
