feat: add hyprscrolling plugin support
- enable scrolling layout in style.conf
- add hyprscrolling plugin configuration
- add keybindings for window movement in scrolling layout
- update main hyprland.conf to source new configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,12 @@ source = ~/.config/hypr/hyprland/keybindings/movement.conf
 source = ~/.config/hypr/hyprland/keybindings/workspaces.conf
 source = ~/.config/hypr/hyprland/keybindings/scratchpad.conf
 source = ~/.config/hypr/hyprland/keybindings/resizing.conf
-source = ~/.config/hypr/hyprland/groups.conf
+source = ~/.config/hypr/hyprland/keybindings/hyprscrolling.conf
+
 
 # Autostart applications
 source = ~/.config/hypr/hyprland/startup/launch-apps.conf
+source = ~/.config/hypr/hyprland/groups.conf
+
+# Plugins
+source = ~/.config/hypr/hyprland/plugin.conf
