--- a/.config/hypr/hyprland/style.conf
+++ b/.config/hypr/hyprland/style.conf
@@ -6,7 +6,8 @@ general {
   col.active_border = rgb(7aa2f7) rgb(a9b1d6) 45deg
   col.inactive_border = rgb(1a1b26)
 
-  layout = dwindle
+  # layout = dwindle
+  layout = scrolling
 
   allow_tearing = false
 }
